@@ -7,56 +7,39 @@
 package org.hibernate.boot.model.internal;
 
 import java.lang.annotation.Annotation;
-import java.util.HashMap;
+import java.lang.invoke.MethodHandles;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 
-import jakarta.persistence.Basic;
-import jakarta.persistence.Column;
-import jakarta.persistence.ElementCollection;
-import jakarta.persistence.EmbeddedId;
-import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
-import jakarta.persistence.JoinColumns;
-import jakarta.persistence.Lob;
-import jakarta.persistence.ManyToMany;
-import jakarta.persistence.ManyToOne;
-import jakarta.persistence.MapsId;
-import jakarta.persistence.OneToMany;
-import jakarta.persistence.OneToOne;
-import jakarta.persistence.Version;
 import org.hibernate.AnnotationException;
 import org.hibernate.AssertionFailure;
 import org.hibernate.MappingException;
 import org.hibernate.annotations.Any;
 import org.hibernate.annotations.AttributeBinderType;
 import org.hibernate.annotations.CompositeType;
-import org.hibernate.annotations.IdGeneratorType;
 import org.hibernate.annotations.Immutable;
-import org.hibernate.annotations.Index;
 import org.hibernate.annotations.LazyGroup;
 import org.hibernate.annotations.ManyToAny;
 import org.hibernate.annotations.NaturalId;
 import org.hibernate.annotations.OptimisticLock;
 import org.hibernate.annotations.Parent;
-import org.hibernate.annotations.ValueGenerationType;
-import org.hibernate.annotations.common.reflection.XAnnotatedElement;
-import org.hibernate.annotations.common.reflection.XClass;
-import org.hibernate.annotations.common.reflection.XProperty;
 import org.hibernate.binder.AttributeBinder;
 import org.hibernate.boot.model.IdentifierGeneratorDefinition;
-import org.hibernate.boot.model.naming.Identifier;
-import org.hibernate.boot.model.naming.ImplicitUniqueKeyNameSource;
-import org.hibernate.boot.model.relational.Database;
+import org.hibernate.boot.models.JpaAnnotations;
 import org.hibernate.boot.spi.AccessType;
 import org.hibernate.boot.spi.InFlightMetadataCollector;
 import org.hibernate.boot.spi.MetadataBuildingContext;
 import org.hibernate.boot.spi.PropertyData;
 import org.hibernate.engine.OptimisticLockStyle;
+import org.hibernate.engine.spi.SharedSessionContractImplementor;
+import org.hibernate.generator.BeforeExecutionGenerator;
+import org.hibernate.generator.EventType;
+import org.hibernate.generator.EventTypeSets;
 import org.hibernate.internal.CoreMessageLogger;
+import org.hibernate.internal.util.collections.CollectionHelper;
 import org.hibernate.mapping.Collection;
 import org.hibernate.mapping.Component;
-import org.hibernate.mapping.GeneratorCreator;
 import org.hibernate.mapping.Join;
 import org.hibernate.mapping.KeyValue;
 import org.hibernate.mapping.MappedSuperclass;
@@ -67,42 +50,52 @@ import org.hibernate.mapping.SimpleValue;
 import org.hibernate.mapping.ToOne;
 import org.hibernate.mapping.Value;
 import org.hibernate.metamodel.spi.EmbeddableInstantiator;
-
-import org.hibernate.resource.beans.container.spi.BeanContainer;
-import org.hibernate.resource.beans.spi.ManagedBeanRegistry;
-import org.hibernate.service.ServiceRegistry;
+import org.hibernate.models.spi.AnnotationDescriptor;
+import org.hibernate.models.spi.AnnotationDescriptorRegistry;
+import org.hibernate.models.spi.ClassDetails;
+import org.hibernate.models.spi.MemberDetails;
+import org.hibernate.models.spi.SourceModelBuildingContext;
+import org.hibernate.models.spi.TypeDetails;
+import org.hibernate.models.spi.TypeVariableScope;
 import org.hibernate.usertype.CompositeUserType;
+
 import org.jboss.logging.Logger;
 
+import jakarta.persistence.Basic;
+import jakarta.persistence.Column;
+import jakarta.persistence.ElementCollection;
+import jakarta.persistence.EmbeddedId;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.Lob;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.MapsId;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Version;
+
 import static jakarta.persistence.FetchType.LAZY;
-import static java.util.Collections.singletonList;
 import static org.hibernate.boot.model.internal.AnyBinder.bindAny;
-import static org.hibernate.boot.model.internal.BinderHelper.isCompositeId;
-import static org.hibernate.boot.model.internal.BinderHelper.isGlobalGeneratorNameGlobal;
-import static org.hibernate.boot.model.internal.ClassPropertyHolder.handleGenericComponentProperty;
-import static org.hibernate.boot.model.internal.ClassPropertyHolder.prepareActualProperty;
-import static org.hibernate.boot.model.internal.CollectionBinder.bindCollection;
-import static org.hibernate.boot.model.internal.GeneratorBinder.createForeignGenerator;
-import static org.hibernate.boot.model.internal.GeneratorBinder.createIdGenerator;
-import static org.hibernate.boot.model.internal.GeneratorBinder.generatorCreator;
 import static org.hibernate.boot.model.internal.BinderHelper.getMappedSuperclassOrNull;
 import static org.hibernate.boot.model.internal.BinderHelper.getPath;
 import static org.hibernate.boot.model.internal.BinderHelper.getPropertyOverriddenByMapperOrMapsId;
 import static org.hibernate.boot.model.internal.BinderHelper.hasToOneAnnotation;
-import static org.hibernate.boot.model.internal.GeneratorBinder.identifierGeneratorCreator;
-import static org.hibernate.boot.model.internal.GeneratorBinder.makeIdGenerator;
+import static org.hibernate.boot.model.internal.ClassPropertyHolder.handleGenericComponentProperty;
+import static org.hibernate.boot.model.internal.ClassPropertyHolder.prepareActualProperty;
+import static org.hibernate.boot.model.internal.CollectionBinder.bindCollection;
 import static org.hibernate.boot.model.internal.EmbeddableBinder.createCompositeBinder;
 import static org.hibernate.boot.model.internal.EmbeddableBinder.createEmbeddable;
+import static org.hibernate.boot.model.internal.EmbeddableBinder.determineCustomInstantiator;
 import static org.hibernate.boot.model.internal.EmbeddableBinder.isEmbedded;
-import static org.hibernate.boot.model.internal.HCANNHelper.findAnnotation;
-import static org.hibernate.boot.model.internal.HCANNHelper.findContainingAnnotations;
+import static org.hibernate.boot.model.internal.GeneratorBinder.createIdGeneratorsFromGeneratorAnnotations;
+import static org.hibernate.boot.model.internal.GeneratorBinder.createValueGeneratorFromAnnotations;
+import static org.hibernate.boot.model.internal.NaturalIdBinder.addNaturalIds;
 import static org.hibernate.boot.model.internal.TimeZoneStorageHelper.resolveTimeZoneStorageCompositeUserType;
 import static org.hibernate.boot.model.internal.ToOneBinder.bindManyToOne;
 import static org.hibernate.boot.model.internal.ToOneBinder.bindOneToOne;
-import static org.hibernate.boot.model.naming.Identifier.toIdentifier;
+import static org.hibernate.id.IdentifierGeneratorHelper.getForeignId;
 import static org.hibernate.internal.util.StringHelper.qualify;
-import static org.hibernate.internal.util.collections.CollectionHelper.combine;
-import static org.hibernate.resource.beans.internal.Helper.allowExtensionsInCdi;
 
 /**
  * A stateful binder responsible for creating {@link Property} objects.
@@ -110,7 +103,7 @@ import static org.hibernate.resource.beans.internal.Helper.allowExtensionsInCdi;
  * @author Emmanuel Bernard
  */
 public class PropertyBinder {
-	private static final CoreMessageLogger LOG = Logger.getMessageLogger( CoreMessageLogger.class, PropertyBinder.class.getName() );
+	private static final CoreMessageLogger LOG = Logger.getMessageLogger( MethodHandles.lookup(), CoreMessageLogger.class, PropertyBinder.class.getName() );
 
 	private MetadataBuildingContext buildingContext;
 
@@ -127,12 +120,16 @@ public class PropertyBinder {
 	private boolean updatable = true;
 	private String cascade;
 	private BasicValueBinder basicValueBinder;
-	private XClass declaringClass;
+	private ClassDetails declaringClass;
 	private boolean declaringClassSet;
 	private boolean embedded;
 	private EntityBinder entityBinder;
 	private boolean toMany;
 	private String referencedEntityName;
+
+	protected SourceModelBuildingContext getSourceModelContext() {
+		return buildingContext.getMetadataCollector().getSourceModelBuildingContext();
+	}
 
 	public void setReferencedEntityName(String referencedEntityName) {
 		this.referencedEntityName = referencedEntityName;
@@ -148,10 +145,10 @@ public class PropertyBinder {
 
 	// property can be null
 	// prefer propertyName to property.getName() since some are overloaded
-	private XProperty property;
-	private XClass returnedClass;
+	private MemberDetails memberDetails;
+	private TypeDetails returnedClass;
 	private boolean isId;
-	private Map<XClass, InheritanceState> inheritanceStatePerClass;
+	private Map<ClassDetails, InheritanceState> inheritanceStatePerClass;
 
 	public void setInsertable(boolean insertable) {
 		this.insertable = insertable;
@@ -206,8 +203,8 @@ public class PropertyBinder {
 		this.buildingContext = buildingContext;
 	}
 
-	public void setDeclaringClass(XClass declaringClass) {
-		this.declaringClass = declaringClass;
+	public void setDeclaringClass(ClassDetails declaringClassDetails) {
+		this.declaringClass = declaringClassDetails;
 		this.declaringClassSet = true;
 	}
 
@@ -215,11 +212,11 @@ public class PropertyBinder {
 		return value instanceof ToOne;
 	}
 
-	public void setProperty(XProperty property) {
-		this.property = property;
+	public void setMemberDetails(MemberDetails memberDetails) {
+		this.memberDetails = memberDetails;
 	}
 
-	public void setReturnedClass(XClass returnedClass) {
+	public void setReturnedClass(TypeDetails returnedClass) {
 		this.returnedClass = returnedClass;
 	}
 
@@ -239,7 +236,7 @@ public class PropertyBinder {
 		return isId;
 	}
 
-	public void setInheritanceStatePerClass(Map<XClass, InheritanceState> inheritanceStatePerClass) {
+	public void setInheritanceStatePerClass(Map<ClassDetails, InheritanceState> inheritanceStatePerClass) {
 		this.inheritanceStatePerClass = inheritanceStatePerClass;
 	}
 
@@ -258,7 +255,7 @@ public class PropertyBinder {
 
 		LOG.debugf( "MetadataSourceProcessor property %s with lazy=%s", name, lazy );
 		final String containerClassName = holder.getClassName();
-		holder.startingProperty( property );
+		holder.startingProperty( memberDetails );
 
 		basicValueBinder = new BasicValueBinder( BasicValueBinder.Kind.ATTRIBUTE, buildingContext );
 		basicValueBinder.setPropertyName( name );
@@ -266,10 +263,10 @@ public class PropertyBinder {
 		basicValueBinder.setColumns( columns );
 		basicValueBinder.setPersistentClassName( containerClassName );
 		basicValueBinder.setType(
-				property,
+				memberDetails,
 				returnedClass,
 				containerClassName,
-				holder.resolveAttributeConverterDescriptor( property )
+				holder.resolveAttributeConverterDescriptor( memberDetails )
 		);
 		basicValueBinder.setReferencedEntityName( referencedEntityName );
 		basicValueBinder.setAccessType( accessType );
@@ -281,19 +278,29 @@ public class PropertyBinder {
 
 	@SuppressWarnings({"rawtypes", "unchecked"})
 	private void callAttributeBinders(Property property, Map<String, PersistentClass> persistentClasses) {
-		for ( Annotation containingAnnotation : findContainingAnnotations( this.property, AttributeBinderType.class ) ) {
-			final AttributeBinderType binderType =
-					containingAnnotation.annotationType().getAnnotation( AttributeBinderType.class );
+		final List<? extends Annotation> metaAnnotatedTargets = memberDetails.getMetaAnnotated(
+				AttributeBinderType.class,
+				getSourceModelContext()
+		);
+
+		if ( CollectionHelper.isEmpty( metaAnnotatedTargets ) ) {
+			return;
+		}
+
+		final AnnotationDescriptorRegistry descriptorRegistry = getSourceModelContext().getAnnotationDescriptorRegistry();
+		for ( int i = 0; i < metaAnnotatedTargets.size(); i++ ) {
+			final Annotation metaAnnotatedTarget = metaAnnotatedTargets.get( i );
+			final AnnotationDescriptor<? extends Annotation> metaAnnotatedDescriptor = descriptorRegistry.getDescriptor( metaAnnotatedTarget.annotationType() );
+			final AttributeBinderType binderTypeAnn = metaAnnotatedDescriptor.getDirectAnnotationUsage( AttributeBinderType.class );
 			try {
-				final AttributeBinder binder = binderType.binder().newInstance();
-				final PersistentClass persistentClass =
-						entityBinder != null
-								? entityBinder.getPersistentClass()
-								: persistentClasses.get( holder.getEntityName() );
-				binder.bind( containingAnnotation, buildingContext, persistentClass, property );
+				final AttributeBinder binder = binderTypeAnn.binder().getConstructor().newInstance();
+				final PersistentClass persistentClass = entityBinder != null
+						? entityBinder.getPersistentClass()
+						: persistentClasses.get( holder.getEntityName() );
+				binder.bind( metaAnnotatedTarget, buildingContext, persistentClass, property );
 			}
 			catch ( Exception e ) {
-				throw new AnnotationException( "error processing @AttributeBinderType annotation '" + containingAnnotation + "'", e );
+				throw new AnnotationException( "error processing @AttributeBinderType annotation '" + metaAnnotatedDescriptor.getAnnotationType().getName() + "'", e );
 			}
 		}
 	}
@@ -317,7 +324,7 @@ public class PropertyBinder {
 			bindId( property );
 		}
 		else {
-			holder.addProperty( property, columns, declaringClass );
+			holder.addProperty( property, memberDetails, columns, declaringClass );
 		}
 
 		callAttributeBindersInSecondPass( property );
@@ -325,7 +332,7 @@ public class PropertyBinder {
 		return property;
 	}
 
-	private void callAttributeBindersInSecondPass(Property property) {
+	void callAttributeBindersInSecondPass(Property property) {
 		final InFlightMetadataCollector metadataCollector = buildingContext.getMetadataCollector();
 		if ( metadataCollector.isInSecondPass() ) {
 			callAttributeBinders( property, metadataCollector.getEntityBindingMap() );
@@ -359,15 +366,12 @@ public class PropertyBinder {
 	}
 
 	private void setDeclaredIdentifier(RootClass rootClass, MappedSuperclass superclass, Property prop) {
-		handleGenericComponentProperty( prop, buildingContext );
+		handleGenericComponentProperty( prop, memberDetails, buildingContext );
 		if ( superclass == null ) {
 			rootClass.setDeclaredIdentifierProperty( prop );
 		}
 		else {
-			final Class<?> type =
-					buildingContext.getBootstrapContext().getReflectionManager()
-							.toClass( declaringClass );
-			prepareActualProperty( prop, type, false, buildingContext,
+			prepareActualProperty( prop, memberDetails, false, buildingContext,
 					superclass::setDeclaredIdentifierProperty );
 		}
 	}
@@ -380,7 +384,7 @@ public class PropertyBinder {
 					new PropertyPreloadedData(),
 					true,
 					false,
-					resolveCustomInstantiator( property, returnedClass ),
+					resolveCustomInstantiator( memberDetails, returnedClass.determineRawClass() ),
 					buildingContext
 			);
 			rootClass.setIdentifier( identifier );
@@ -394,16 +398,20 @@ public class PropertyBinder {
 		}
 	}
 
-	private Class<? extends EmbeddableInstantiator> resolveCustomInstantiator(XProperty property, XClass embeddableClass) {
-		if ( property.isAnnotationPresent( org.hibernate.annotations.EmbeddableInstantiator.class ) ) {
-			return property.getAnnotation( org.hibernate.annotations.EmbeddableInstantiator.class ).value();
+	private Class<? extends EmbeddableInstantiator> resolveCustomInstantiator(
+			MemberDetails property,
+			ClassDetails embeddableClass) {
+		final org.hibernate.annotations.EmbeddableInstantiator onEmbedded = property.getDirectAnnotationUsage( org.hibernate.annotations.EmbeddableInstantiator.class );
+		if ( onEmbedded != null ) {
+			return onEmbedded.value();
 		}
-		else if ( embeddableClass.isAnnotationPresent( org.hibernate.annotations.EmbeddableInstantiator.class ) ) {
-			return embeddableClass.getAnnotation( org.hibernate.annotations.EmbeddableInstantiator.class ).value();
+
+		final org.hibernate.annotations.EmbeddableInstantiator onEmbeddable = embeddableClass.getDirectAnnotationUsage( org.hibernate.annotations.EmbeddableInstantiator.class );
+		if ( onEmbeddable != null ) {
+			return onEmbeddable.value();
 		}
-		else {
-			return null;
-		}
+
+		return null;
 	}
 
 	//used when the value is provided and the binding is done elsewhere
@@ -426,45 +434,25 @@ public class PropertyBinder {
 		handleOptional( property );
 		inferOptimisticLocking( property );
 		LOG.tracev( "Cascading {0} with {1}", name, cascade );
-		callAttributeBindersInSecondPass( property );
 		return property;
 	}
 
 	private void handleValueGeneration(Property property) {
-		if ( this.property != null ) {
-			property.setValueGeneratorCreator( getValueGenerationFromAnnotations( this.property ) );
+		if ( memberDetails != null ) {
+			property.setValueGeneratorCreator(
+					createValueGeneratorFromAnnotations( holder, name, memberDetails, buildingContext ) );
 		}
-	}
-
-	/**
-	 * Returns the value generation strategy for the given property, if any.
-	 */
-	private GeneratorCreator getValueGenerationFromAnnotations(XProperty property) {
-		GeneratorCreator creator = null;
-		for ( Annotation annotation : property.getAnnotations() ) {
-			final GeneratorCreator candidate = generatorCreator( property, annotation );
-			if ( candidate != null ) {
-				if ( creator != null ) {
-					throw new AnnotationException( "Property '" + qualify( holder.getPath(), name )
-							+ "' has multiple '@ValueGenerationType' annotations" );
-				}
-				else {
-					creator = candidate;
-				}
-			}
-		}
-		return creator;
 	}
 
 	private void handleLob(Property property) {
-		if ( this.property != null ) {
+		if ( this.memberDetails != null ) {
 			// HHH-4635 -- needed for dialect-specific property ordering
-			property.setLob( this.property.isAnnotationPresent( Lob.class ) );
+			property.setLob( this.memberDetails.hasDirectAnnotationUsage( Lob.class ) );
 		}
 	}
 
 	private void handleMutability(Property property) {
-		if ( this.property != null && this.property.isAnnotationPresent( Immutable.class ) ) {
+		if ( this.memberDetails != null && this.memberDetails.hasDirectAnnotationUsage( Immutable.class ) ) {
 			updatable = false;
 		}
 		property.setInsertable( insertable );
@@ -472,8 +460,8 @@ public class PropertyBinder {
 	}
 
 	private void handleOptional(Property property) {
-		if ( this.property != null ) {
-			property.setOptional( !isId && isOptional( this.property, this.holder ) );
+		if ( this.memberDetails != null ) {
+			property.setOptional( !isId && isOptional( this.memberDetails, this.holder ) );
 			if ( property.isOptional() ) {
 				final OptionalDeterminationSecondPass secondPass = persistentClasses -> {
 					// Defer determining whether a property and its columns are nullable,
@@ -502,8 +490,8 @@ public class PropertyBinder {
 	}
 
 	private void handleNaturalId(Property property) {
-		if ( this.property != null && entityBinder != null ) {
-			final NaturalId naturalId = this.property.getAnnotation( NaturalId.class );
+		if ( this.memberDetails != null && entityBinder != null ) {
+			final NaturalId naturalId = this.memberDetails.getDirectAnnotationUsage( NaturalId.class );
 			if ( naturalId != null ) {
 				if ( !entityBinder.isRootEntity() ) {
 					throw new AnnotationException( "Property '" + qualify( holder.getPath(), name )
@@ -523,27 +511,28 @@ public class PropertyBinder {
 		if ( value instanceof Collection ) {
 			property.setOptimisticLocked( ((Collection) value).isOptimisticLocked() );
 		}
-		else if ( this.property != null && this.property.isAnnotationPresent( OptimisticLock.class ) ) {
-			final OptimisticLock optimisticLock = this.property.getAnnotation( OptimisticLock.class );
-			validateOptimisticLock( optimisticLock );
-			property.setOptimisticLocked( !optimisticLock.excluded() );
+		else if ( this.memberDetails != null && this.memberDetails.hasDirectAnnotationUsage( OptimisticLock.class ) ) {
+			final OptimisticLock optimisticLock = this.memberDetails.getDirectAnnotationUsage( OptimisticLock.class );
+			final boolean excluded = optimisticLock.excluded();
+			validateOptimisticLock( excluded );
+			property.setOptimisticLocked( !excluded );
 		}
 		else {
 			property.setOptimisticLocked( !isToOneValue(value) || insertable ); // && updatable as well???
 		}
 	}
 
-	private void validateOptimisticLock(OptimisticLock optimisticLock) {
-		if ( optimisticLock.excluded() ) {
-			if ( property.isAnnotationPresent( Version.class ) ) {
+	private void validateOptimisticLock(boolean excluded) {
+		if ( excluded ) {
+			if ( memberDetails.hasDirectAnnotationUsage( Version.class ) ) {
 				throw new AnnotationException("Property '" + qualify( holder.getPath(), name )
 						+ "' is annotated '@OptimisticLock(excluded=true)' and '@Version'" );
 			}
-			if ( property.isAnnotationPresent( Id.class ) ) {
+			if ( memberDetails.hasDirectAnnotationUsage( Id.class ) ) {
 				throw new AnnotationException("Property '" + qualify( holder.getPath(), name )
 						+ "' is annotated '@OptimisticLock(excluded=true)' and '@Id'" );
 			}
-			if ( property.isAnnotationPresent( EmbeddedId.class ) ) {
+			if ( memberDetails.hasDirectAnnotationUsage( EmbeddedId.class ) ) {
 				throw new AnnotationException( "Property '" + qualify( holder.getPath(), name )
 						+ "' is annotated '@OptimisticLock(excluded=true)' and '@EmbeddedId'" );
 			}
@@ -562,7 +551,7 @@ public class PropertyBinder {
 			PropertyContainer propertyContainer,
 			MetadataBuildingContext context) {
 		int idPropertyCounter = 0;
-		for ( XProperty property : propertyContainer.propertyIterator() ) {
+		for ( MemberDetails property : propertyContainer.propertyIterator() ) {
 			idPropertyCounter += addProperty( propertyContainer, property, elements, context );
 		}
 		return idPropertyCounter;
@@ -570,60 +559,61 @@ public class PropertyBinder {
 
 	private static int addProperty(
 			PropertyContainer propertyContainer,
-			XProperty property,
+			MemberDetails property,
 			List<PropertyData> inFlightPropertyDataList,
 			MetadataBuildingContext context) {
 		// see if inFlightPropertyDataList already contains a PropertyData for this name,
-		// and if so, skip it..
+		// and if so, skip it...
 		for ( PropertyData propertyData : inFlightPropertyDataList ) {
-			if ( propertyData.getPropertyName().equals( property.getName() ) ) {
+			if ( propertyData.getPropertyName().equals( property.resolveAttributeName() ) ) {
 				checkIdProperty( property, propertyData );
 				// EARLY EXIT!!!
 				return 0;
 			}
 		}
 
-		final XClass declaringClass = propertyContainer.getDeclaringClass();
-		final XClass entity = propertyContainer.getEntityAtStake();
+		final ClassDetails declaringClass = propertyContainer.getDeclaringClass();
+		final TypeVariableScope ownerType = propertyContainer.getTypeAtStake();
 		int idPropertyCounter = 0;
 		final PropertyData propertyAnnotatedElement = new PropertyInferredData(
 				declaringClass,
+				ownerType,
 				property,
 				propertyContainer.getClassLevelAccessType().getType(),
-				context.getBootstrapContext().getReflectionManager()
+				context
 		);
 
 		// put element annotated by @Id in front, since it has to be parsed
 		// before any association by Hibernate
-		final XAnnotatedElement element = propertyAnnotatedElement.getProperty();
+		final MemberDetails element = propertyAnnotatedElement.getAttributeMember();
 		if ( hasIdAnnotation( element ) ) {
 			inFlightPropertyDataList.add( 0, propertyAnnotatedElement );
-			handleIdProperty( propertyContainer, context, declaringClass, entity, element );
+			handleIdProperty( propertyContainer, context, declaringClass, ownerType, element );
 			if ( hasToOneAnnotation( element ) ) {
-				context.getMetadataCollector().addToOneAndIdProperty( entity, propertyAnnotatedElement );
+				context.getMetadataCollector().addToOneAndIdProperty( ownerType.determineRawClass(), propertyAnnotatedElement );
 			}
 			idPropertyCounter++;
 		}
 		else {
 			inFlightPropertyDataList.add( propertyAnnotatedElement );
 		}
-		if ( element.isAnnotationPresent( MapsId.class ) ) {
-			context.getMetadataCollector().addPropertyAnnotatedWithMapsId( entity, propertyAnnotatedElement );
+		if ( element.hasDirectAnnotationUsage( MapsId.class ) ) {
+			context.getMetadataCollector().addPropertyAnnotatedWithMapsId( ownerType.determineRawClass(), propertyAnnotatedElement );
 		}
 
 		return idPropertyCounter;
 	}
 
-	private static void checkIdProperty(XProperty property, PropertyData propertyData) {
-		final Id incomingIdProperty = property.getAnnotation( Id.class );
-		final Id existingIdProperty = propertyData.getProperty().getAnnotation( Id.class );
+	private static void checkIdProperty(MemberDetails property, PropertyData propertyData) {
+		final Id incomingIdProperty = property.getDirectAnnotationUsage( Id.class );
+		final Id existingIdProperty = propertyData.getAttributeMember().getDirectAnnotationUsage( Id.class );
 		if ( incomingIdProperty != null && existingIdProperty == null ) {
 			throw new MappingException(
 					String.format(
 							"You cannot override the [%s] non-identifier property from the [%s] base class or @MappedSuperclass and make it an identifier in the [%s] subclass",
-							propertyData.getProperty().getName(),
-							propertyData.getProperty().getDeclaringClass().getName(),
-							property.getDeclaringClass().getName()
+							propertyData.getAttributeMember().getName(),
+							propertyData.getAttributeMember().getDeclaringType().getName(),
+							property.getDeclaringType().getName()
 					)
 			);
 		}
@@ -632,58 +622,58 @@ public class PropertyBinder {
 	private static void handleIdProperty(
 			PropertyContainer propertyContainer,
 			MetadataBuildingContext context,
-			XClass declaringClass,
-			XClass entity,
-			XAnnotatedElement element) {
+			ClassDetails declaringClass,
+			TypeVariableScope ownerType,
+			MemberDetails element) {
 		// The property must be put in hibernate.properties as it's a system wide property. Fixable?
 		//TODO support true/false/default on the property instead of present / not present
 		//TODO is @Column mandatory?
 		//TODO add method support
+		final SourceModelBuildingContext sourceModelContext = context.getMetadataCollector().getSourceModelBuildingContext();
 		if ( context.getBuildingOptions().isSpecjProprietarySyntaxEnabled() ) {
-			if ( element.isAnnotationPresent( Id.class ) && element.isAnnotationPresent( Column.class ) ) {
-				final String columnName = element.getAnnotation( Column.class ).name();
-				for ( XProperty property : declaringClass.getDeclaredProperties( AccessType.FIELD.getType() ) ) {
-					if ( !property.isAnnotationPresent( MapsId.class ) && isJoinColumnPresent( columnName, property ) ) {
+			if ( element.hasDirectAnnotationUsage( Id.class ) && element.hasDirectAnnotationUsage( Column.class ) ) {
+				final String columnName = element.getDirectAnnotationUsage( Column.class ).name();
+				declaringClass.forEachField( (index, fieldDetails) -> {
+					if ( !element.hasDirectAnnotationUsage( MapsId.class ) && isJoinColumnPresent( columnName, element, sourceModelContext ) ) {
 						//create a PropertyData for the specJ property holding the mapping
 						context.getMetadataCollector().addPropertyAnnotatedWithMapsIdSpecj(
-								entity,
+								ownerType.determineRawClass(),
 								new PropertyInferredData(
 										declaringClass,
+										ownerType,
 										//same dec
-										property,
+										element,
 										// the actual @XToOne property
 										propertyContainer.getClassLevelAccessType().getType(),
 										//TODO we should get the right accessor but the same as id would do
-										context.getBootstrapContext().getReflectionManager()
+										context
 								),
 								element.toString()
 						);
 					}
-				}
+				} );
 			}
 		}
 	}
 
-	private static boolean isJoinColumnPresent(String columnName, XProperty property) {
+	private static boolean isJoinColumnPresent(String columnName, MemberDetails property, SourceModelBuildingContext modelContext) {
 		//The detection of a configured individual JoinColumn differs between Annotation
 		//and XML configuration processing.
-		if ( property.isAnnotationPresent( JoinColumn.class )
-				&& property.getAnnotation( JoinColumn.class ).name().equals( columnName ) ) {
-			return true;
-		}
-		else if ( property.isAnnotationPresent( JoinColumns.class ) ) {
-			for ( JoinColumn columnAnnotation : property.getAnnotation( JoinColumns.class ).value() ) {
-				if ( columnName.equals( columnAnnotation.name() ) ) {
-					return true;
-				}
+		final JoinColumn[] joinColumnAnnotations = property.getRepeatedAnnotationUsages(
+				JpaAnnotations.JOIN_COLUMN,
+				modelContext
+		);
+		for ( JoinColumn joinColumnAnnotation : joinColumnAnnotations ) {
+			if ( joinColumnAnnotation.name().equals( columnName ) ) {
+				return true;
 			}
 		}
 		return false;
 	}
 
-	static boolean hasIdAnnotation(XAnnotatedElement element) {
-		return element.isAnnotationPresent( Id.class )
-			|| element.isAnnotationPresent( EmbeddedId.class );
+	static boolean hasIdAnnotation(MemberDetails element) {
+		return element.hasDirectAnnotationUsage( Id.class )
+			|| element.hasDirectAnnotationUsage( EmbeddedId.class );
 	}
 
 	/**
@@ -699,7 +689,7 @@ public class PropertyBinder {
 			boolean isComponentEmbedded,
 			boolean inSecondPass,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass) throws MappingException {
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass) throws MappingException {
 
 		if ( alreadyProcessedBySuper( propertyHolder, inferredData, entityBinder ) ) {
 			LOG.debugf(
@@ -721,8 +711,8 @@ public class PropertyBinder {
 				);
 			}
 
-			final XProperty property = inferredData.getProperty();
-			if ( property.isAnnotationPresent( Parent.class ) ) {
+			final MemberDetails property = inferredData.getAttributeMember();
+			if ( property.hasDirectAnnotationUsage( Parent.class ) ) {
 				handleParentProperty( propertyHolder, inferredData, property );
 			}
 			else {
@@ -738,8 +728,7 @@ public class PropertyBinder {
 						inSecondPass,
 						context,
 						inheritanceStatePerClass,
-						property,
-						inferredData.getClassOrElement()
+						property
 				);
 			}
 		}
@@ -750,9 +739,9 @@ public class PropertyBinder {
 			&& binder.isPropertyDefinedInSuperHierarchy( data.getPropertyName() );
 	}
 
-	private static void handleParentProperty(PropertyHolder holder, PropertyData data, XProperty property) {
+	private static void handleParentProperty(PropertyHolder holder, PropertyData data, MemberDetails property) {
 		if ( holder.isComponent() ) {
-			holder.setParentProperty( property.getName() );
+			holder.setParentProperty( property.resolveAttributeName() );
 		}
 		else {
 			throw new AnnotationException( "Property '" + getPath( holder, data )
@@ -770,26 +759,24 @@ public class PropertyBinder {
 			boolean isComponentEmbedded,
 			boolean inSecondPass,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
-			XProperty property,
-			XClass returnedClass) {
-
-		final ColumnsBuilder columnsBuilder = new ColumnsBuilder(
-				propertyHolder,
-				nullability,
-				property,
-				inferredData,
-				entityBinder,
-				context
-		).extractMetadata();
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
+			MemberDetails property) {
+		final TypeDetails attributeTypeDetails =
+				inferredData.getAttributeMember().isPlural()
+						? inferredData.getAttributeMember().getType()
+						: inferredData.getClassOrElementType();
+		final ClassDetails attributeClassDetails = attributeTypeDetails.determineRawClass();
+		final ColumnsBuilder columnsBuilder =
+				new ColumnsBuilder( propertyHolder, nullability, property, inferredData, entityBinder, context )
+						.extractMetadata();
 
 		final PropertyBinder propertyBinder = new PropertyBinder();
 		propertyBinder.setName( inferredData.getPropertyName() );
 		propertyBinder.setReturnedClassName( inferredData.getTypeName() );
 		propertyBinder.setAccessType( inferredData.getDefaultAccess() );
 		propertyBinder.setHolder( propertyHolder );
-		propertyBinder.setProperty( property );
-		propertyBinder.setReturnedClass( inferredData.getPropertyClass() );
+		propertyBinder.setMemberDetails( property );
+		propertyBinder.setReturnedClass( attributeTypeDetails );
 		propertyBinder.setBuildingContext( context );
 		if ( isIdentifierMapper ) {
 			propertyBinder.setInsertable( false );
@@ -800,7 +787,7 @@ public class PropertyBinder {
 		propertyBinder.setInheritanceStatePerClass( inheritanceStatePerClass );
 		propertyBinder.setId( !entityBinder.isIgnoreIdAnnotations() && hasIdAnnotation( property ) );
 
-		final LazyGroup lazyGroupAnnotation = property.getAnnotation( LazyGroup.class );
+		final LazyGroup lazyGroupAnnotation = property.getDirectAnnotationUsage( LazyGroup.class );
 		if ( lazyGroupAnnotation != null ) {
 			propertyBinder.setLazyGroup( lazyGroupAnnotation.value() );
 		}
@@ -818,11 +805,10 @@ public class PropertyBinder {
 				context,
 				inheritanceStatePerClass,
 				property,
-				returnedClass,
+				attributeClassDetails,
 				columnsBuilder,
 				propertyBinder
 		);
-		addIndexes( inSecondPass, property, columns, joinColumns );
 		addNaturalIds( inSecondPass, property, columns, joinColumns, context );
 	}
 
@@ -836,9 +822,9 @@ public class PropertyBinder {
 			boolean isComponentEmbedded,
 			boolean inSecondPass,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
-			XProperty property,
-			XClass returnedClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
+			MemberDetails property,
+			ClassDetails returnedClass,
 			ColumnsBuilder columnsBuilder,
 			PropertyBinder propertyBinder) {
 		if ( isVersion( property ) ) {
@@ -861,8 +847,7 @@ public class PropertyBinder {
 					context,
 					property,
 					columnsBuilder.getJoinColumns(),
-					propertyBinder,
-					isForcePersist( property )
+					propertyBinder
 			);
 		}
 		else if ( isOneToOne( property ) ) {
@@ -874,8 +859,7 @@ public class PropertyBinder {
 					context,
 					property,
 					columnsBuilder.getJoinColumns(),
-					propertyBinder,
-					isForcePersist( property )
+					propertyBinder
 			);
 		}
 		else if ( isAny( property ) ) {
@@ -887,8 +871,7 @@ public class PropertyBinder {
 					isIdentifierMapper,
 					context,
 					property,
-					columnsBuilder.getJoinColumns(),
-					isForcePersist( property )
+					columnsBuilder.getJoinColumns()
 			);
 		}
 		else if ( isCollection( property ) ) {
@@ -928,32 +911,27 @@ public class PropertyBinder {
 		return columnsBuilder.getColumns();
 	}
 
-	private static boolean isVersion(XProperty property) {
-		return property.isAnnotationPresent( Version.class );
+	private static boolean isVersion(MemberDetails property) {
+		return property.hasDirectAnnotationUsage( Version.class );
 	}
 
-	private static boolean isOneToOne(XProperty property) {
-		return property.isAnnotationPresent( OneToOne.class );
+	private static boolean isOneToOne(MemberDetails property) {
+		return property.hasDirectAnnotationUsage( OneToOne.class );
 	}
 
-	private static boolean isManyToOne(XProperty property) {
-		return property.isAnnotationPresent( ManyToOne.class );
+	private static boolean isManyToOne(MemberDetails property) {
+		return property.hasDirectAnnotationUsage( ManyToOne.class );
 	}
 
-	private static boolean isAny(XProperty property) {
-		return property.isAnnotationPresent( Any.class );
+	private static boolean isAny(MemberDetails property) {
+		return property.hasDirectAnnotationUsage( Any.class );
 	}
 
-	private static boolean isCollection(XProperty property) {
-		return property.isAnnotationPresent( OneToMany.class )
-			|| property.isAnnotationPresent( ManyToMany.class )
-			|| property.isAnnotationPresent( ElementCollection.class )
-			|| property.isAnnotationPresent( ManyToAny.class );
-}
-
-	private static boolean isForcePersist(XProperty property) {
-		return property.isAnnotationPresent( MapsId.class )
-			|| property.isAnnotationPresent( Id.class );
+	private static boolean isCollection(MemberDetails property) {
+		return property.hasDirectAnnotationUsage( OneToMany.class )
+			|| property.hasDirectAnnotationUsage( ManyToMany.class )
+			|| property.hasDirectAnnotationUsage( ElementCollection.class )
+			|| property.hasDirectAnnotationUsage( ManyToAny.class );
 	}
 
 	private static void bindVersionProperty(
@@ -961,7 +939,7 @@ public class PropertyBinder {
 			PropertyData inferredData,
 			boolean isIdentifierMapper,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
 			AnnotatedColumns columns,
 			PropertyBinder propertyBinder) {
 		checkVersionProperty( propertyHolder, isIdentifierMapper );
@@ -975,11 +953,14 @@ public class PropertyBinder {
 		rootClass.setVersion( property );
 
 		//If version is on a mapped superclass, update the mapping
-		final XClass declaringClass = inferredData.getDeclaringClass();
+		final ClassDetails declaringClass = inferredData.getDeclaringClass();
 		final org.hibernate.mapping.MappedSuperclass superclass =
 				getMappedSuperclassOrNull( declaringClass, inheritanceStatePerClass, context );
 		if ( superclass != null ) {
-			superclass.setDeclaredVersion( property );
+			// Don't overwrite an existing version property
+			if ( superclass.getDeclaredVersion() == null ) {
+				superclass.setDeclaredVersion( property );
+			}
 		}
 		else {
 			//we know the property is on the actual entity
@@ -1020,11 +1001,11 @@ public class PropertyBinder {
 			boolean isIdentifierMapper,
 			boolean isComponentEmbedded,
 			MetadataBuildingContext context,
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
-			XProperty property,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
+			MemberDetails property,
 			ColumnsBuilder columnsBuilder,
 			AnnotatedColumns columns,
-			XClass returnedClass,
+			ClassDetails returnedClass,
 			PropertyBinder propertyBinder) {
 
 		// overrides from @MapsId or @IdClass if needed
@@ -1039,7 +1020,7 @@ public class PropertyBinder {
 			final PropertyData overridingProperty = getPropertyOverriddenByMapperOrMapsId(
 					propertyBinder.isId(),
 					propertyHolder,
-					property.getName(),
+					property.resolveAttributeName(),
 					context
 			);
 			if ( overridingProperty != null ) {
@@ -1064,8 +1045,8 @@ public class PropertyBinder {
 				resolveCompositeUserType( inferredData, context );
 
 		if ( isComposite || compositeUserType != null ) {
-			if ( property.isArray() && property.getElementClass() != null
-					&& isEmbedded( property, property.getElementClass() ) ) {
+			if ( property.isArray() && property.getElementType() != null
+					&& isEmbedded( property, property.getElementType() ) ) {
 				// This is a special kind of basic aggregate component array type
 				propertyBinder.setComponentElement(
 						EmbeddableBinder.bindEmbeddable(
@@ -1080,7 +1061,7 @@ public class PropertyBinder {
 								inheritanceStatePerClass,
 								null,
 								null,
-								EmbeddableBinder.determineCustomInstantiator( property, returnedClass, context ),
+								determineCustomInstantiator( property, returnedClass, context ),
 								compositeUserType,
 								null,
 								columns
@@ -1107,8 +1088,9 @@ public class PropertyBinder {
 				);
 			}
 		}
-		else if ( property.isCollection() && property.getElementClass() != null
-				&& isEmbedded( property, property.getElementClass() ) ) {
+		else if ( property.isPlural()
+				&& property.getElementType() != null
+				&& isEmbedded( property, property.getElementType() ) ) {
 			// This is a special kind of basic aggregate component array type
 			propertyBinder.setComponentElement(
 					EmbeddableBinder.bindEmbeddable(
@@ -1123,7 +1105,7 @@ public class PropertyBinder {
 							inheritanceStatePerClass,
 							null,
 							null,
-							EmbeddableBinder.determineCustomInstantiator( property, property.getElementClass(), context ),
+							determineCustomInstantiator( property, property.getElementType().determineRawClass(), context ),
 							compositeUserType,
 							null,
 							columns
@@ -1147,20 +1129,23 @@ public class PropertyBinder {
 		if ( isOverridden ) {
 			handleGeneratorsForOverriddenId(
 					propertyHolder,
-					classGenerators,
+//					classGenerators,
 					context,
 					property,
 					propertyBinder
 			);
 		}
 		else if ( propertyBinder.isId() ) {
+			if ( isIdentifierMapper ) {
+				throw new AnnotationException( "Property '"+ getPath( propertyHolder, inferredData )
+						+ "' belongs to an '@IdClass' and may not be annotated '@Id' or '@EmbeddedId'" );
+			}
 			//components and regular basic types create SimpleValue objects
-			processId(
+			createIdGeneratorsFromGeneratorAnnotations(
 					propertyHolder,
 					inferredData,
 					(SimpleValue) propertyBinder.getValue(),
 					classGenerators,
-					isIdentifierMapper,
 					context
 			);
 		}
@@ -1168,50 +1153,50 @@ public class PropertyBinder {
 	}
 
 	private static boolean isComposite(
-			Map<XClass, InheritanceState> inheritanceStatePerClass,
-			XProperty property,
-			XClass returnedClass,
+			Map<ClassDetails, InheritanceState> inheritanceStatePerClass,
+			MemberDetails property,
+			ClassDetails returnedClass,
 			PropertyData overridingProperty) {
-		final InheritanceState state = inheritanceStatePerClass.get( overridingProperty.getClassOrElement() );
+		final InheritanceState state = inheritanceStatePerClass.get( overridingProperty.getClassOrElementType().determineRawClass() );
 		return state != null ? state.hasIdClassOrEmbeddedId() : isEmbedded( property, returnedClass );
 	}
 
 	private static void handleGeneratorsForOverriddenId(
 			PropertyHolder propertyHolder,
-			Map<String, IdentifierGeneratorDefinition> classGenerators,
+//			Map<String, IdentifierGeneratorDefinition> classGenerators,
 			MetadataBuildingContext context,
-			XProperty property,
+			MemberDetails property,
 			PropertyBinder propertyBinder) {
 		final PropertyData mapsIdProperty = getPropertyOverriddenByMapperOrMapsId(
 				propertyBinder.isId(),
 				propertyHolder,
-				property.getName(),
+				property.resolveAttributeName(),
 				context
 		);
-		final IdentifierGeneratorDefinition foreignGenerator = createForeignGenerator( mapsIdProperty );
-		if ( isGlobalGeneratorNameGlobal( context ) ) {
-			context.getMetadataCollector()
-					.addSecondPass( new IdGeneratorResolverSecondPass(
-							(SimpleValue) propertyBinder.getValue(),
-							property,
-							foreignGenerator.getStrategy(),
-							foreignGenerator.getName(),
-							context,
-							foreignGenerator
-					) );
-		}
-		else {
-			final Map<String, IdentifierGeneratorDefinition> generators = new HashMap<>( classGenerators );
-			generators.put( foreignGenerator.getName(), foreignGenerator );
-			makeIdGenerator(
-					(SimpleValue) propertyBinder.getValue(),
-					property,
-					foreignGenerator.getStrategy(),
-					foreignGenerator.getName(),
-					context,
-					generators
-			);
-		}
+		final SimpleValue idValue = (SimpleValue) propertyBinder.getValue();
+		final RootClass rootClass = propertyHolder.getPersistentClass().getRootClass();
+		final String propertyName = mapsIdProperty.getPropertyName();
+		final String entityName = rootClass.getEntityName();
+		idValue.setCustomIdGeneratorCreator( creationContext ->
+				new BeforeExecutionGenerator() {
+					@Override
+					public Object generate(
+							SharedSessionContractImplementor session,
+							Object owner,
+							Object currentValue,
+							EventType eventType) {
+						return getForeignId( entityName, propertyName, session, owner );
+					}
+					@Override
+					public EnumSet<EventType> getEventTypes() {
+						return EventTypeSets.INSERT_ONLY;
+					}
+					@Override
+					public boolean allowAssignedIdentifiers() {
+						return true;
+					}
+				}
+		);
 	}
 
 	private static void createBasicBinder(
@@ -1219,11 +1204,10 @@ public class PropertyBinder {
 			PropertyData inferredData,
 			Nullability nullability,
 			MetadataBuildingContext context,
-			XProperty property,
+			MemberDetails property,
 			AnnotatedColumns columns,
 			PropertyBinder propertyBinder,
 			boolean isOverridden) {
-
 		if ( shouldForceNotNull( nullability, propertyBinder, isExplicitlyOptional( property ) ) ) {
 			forceColumnsNotNull( propertyHolder, inferredData, columns, propertyBinder );
 		}
@@ -1234,7 +1218,7 @@ public class PropertyBinder {
 			final PropertyData mapsIdProperty = getPropertyOverriddenByMapperOrMapsId(
 					propertyBinder.isId(),
 					propertyHolder,
-					property.getName(),
+					property.resolveAttributeName(),
 					context
 			);
 			propertyBinder.setReferencedEntityName( mapsIdProperty.getClassOrElementName() );
@@ -1265,208 +1249,78 @@ public class PropertyBinder {
 	/**
 	 * Should this property be considered optional, without considering
 	 * whether it is primitive?
+	 *
+	 * @apiNote Poorly named to a degree.  The intention is really whether non-optional is explicit
 	 */
-	private static boolean isExplicitlyOptional(XProperty property) {
-		return !property.isAnnotationPresent( Basic.class )
-			|| property.getAnnotation( Basic.class ).optional();
+	private static boolean isExplicitlyOptional(MemberDetails attributeMember) {
+		final Basic basicAnn = attributeMember.getDirectAnnotationUsage( Basic.class );
+		if ( basicAnn == null ) {
+			// things are optional (nullable) by default.  If there is no annotation, that cannot be altered
+			return true;
+		}
+
+		return basicAnn.optional();
 	}
 
 	/**
 	 * Should this property be considered optional, taking into
 	 * account whether it is primitive?
 	 */
-	public static boolean isOptional(XProperty property, PropertyHolder propertyHolder) {
-		return property.isAnnotationPresent( Basic.class )
-				? property.getAnnotation( Basic.class ).optional()
-				: property.isArray()
-				|| propertyHolder != null && propertyHolder.isComponent()
-				|| !property.getClassOrElementClass().isPrimitive();
-	}
-
-	private static boolean isLazy(XProperty property) {
-		return property.isAnnotationPresent( Basic.class )
-			&& property.getAnnotation( Basic.class ).fetch() == LAZY;
-	}
-
-	private static void addIndexes(
-			boolean inSecondPass,
-			XProperty property,
-			AnnotatedColumns columns,
-			AnnotatedJoinColumns joinColumns) {
-		//process indexes after everything: in second pass, many to one has to be done before indexes
-		final Index index = property.getAnnotation( Index.class );
-		if ( index != null ) {
-			if ( joinColumns != null ) {
-				for ( AnnotatedColumn column : joinColumns.getColumns() ) {
-					column.addIndex( index, inSecondPass);
-				}
-			}
-			else {
-				if ( columns != null ) {
-					for ( AnnotatedColumn column : columns.getColumns() ) {
-						column.addIndex( index, inSecondPass );
-					}
-				}
-			}
+	public static boolean isOptional(MemberDetails attributeMember, PropertyHolder propertyHolder) {
+		final Basic basicAnn = attributeMember.getDirectAnnotationUsage( Basic.class );
+		if ( basicAnn != null ) {
+			return basicAnn.optional();
 		}
+
+		if ( attributeMember.isArray() ) {
+			return true;
+		}
+
+		if ( propertyHolder != null && propertyHolder.isComponent() ) {
+			return true;
+		}
+
+		if ( attributeMember.isPlural() ) {
+			return attributeMember.getElementType().getTypeKind() != TypeDetails.Kind.PRIMITIVE;
+		}
+
+		return attributeMember.getType().getTypeKind() != TypeDetails.Kind.PRIMITIVE;
 	}
 
-	private static void addNaturalIds(
-			boolean inSecondPass,
-			XProperty property,
-			AnnotatedColumns columns,
-			AnnotatedJoinColumns joinColumns,
-			MetadataBuildingContext context) {
-		// Natural ID columns must reside in one single UniqueKey within the Table.
-		// For now, simply ensure consistent naming.
-		// TODO: AFAIK, there really isn't a reason for these UKs to be created
-		// on the SecondPass. This whole area should go away...
-		final NaturalId naturalId = property.getAnnotation( NaturalId.class );
-		if ( naturalId != null ) {
-			final Database database = context.getMetadataCollector().getDatabase();
-			if ( joinColumns != null ) {
-				final Identifier name = context.getBuildingOptions().getImplicitNamingStrategy()
-						.determineUniqueKeyName(new ImplicitUniqueKeyNameSource() {
-							@Override
-							public Identifier getTableName() {
-								return joinColumns.getTable().getNameIdentifier();
-							}
-
-							@Override
-							public List<Identifier> getColumnNames() {
-								return singletonList(toIdentifier("_NaturalID"));
-							}
-
-							@Override
-							public Identifier getUserProvidedIdentifier() {
-								return null;
-							}
-
-							@Override
-							public MetadataBuildingContext getBuildingContext() {
-								return context;
-							}
-						});
-				final String keyName = name.render( database.getDialect() );
-				for ( AnnotatedColumn column : joinColumns.getColumns() ) {
-					column.addUniqueKey( keyName, inSecondPass );
-				}
-			}
-			else {
-				final Identifier name = context.getBuildingOptions().getImplicitNamingStrategy()
-						.determineUniqueKeyName(new ImplicitUniqueKeyNameSource() {
-							@Override
-							public Identifier getTableName() {
-								return columns.getTable().getNameIdentifier();
-							}
-
-							@Override
-							public List<Identifier> getColumnNames() {
-								return singletonList(toIdentifier("_NaturalID"));
-							}
-
-							@Override
-							public Identifier getUserProvidedIdentifier() {
-								return null;
-							}
-
-							@Override
-							public MetadataBuildingContext getBuildingContext() {
-								return context;
-							}
-						});
-				final String keyName = name.render( database.getDialect() );
-				for ( AnnotatedColumn column : columns.getColumns() ) {
-					column.addUniqueKey( keyName, inSecondPass );
-				}
-			}
-		}
+	private static boolean isLazy(MemberDetails property) {
+		final Basic annotationUsage = property.getDirectAnnotationUsage( Basic.class );
+		return annotationUsage != null && annotationUsage.fetch() == LAZY;
 	}
 
 	private static Class<? extends CompositeUserType<?>> resolveCompositeUserType(
 			PropertyData inferredData,
 			MetadataBuildingContext context) {
-		final XProperty property = inferredData.getProperty();
-		final XClass returnedClass = inferredData.getClassOrElement();
+		final SourceModelBuildingContext sourceModelContext =
+				context.getMetadataCollector().getSourceModelBuildingContext();
+		final MemberDetails attributeMember = inferredData.getAttributeMember();
+		final TypeDetails classOrElementType = inferredData.getClassOrElementType();
+		final ClassDetails returnedClass = classOrElementType.determineRawClass();
 
-		if ( property != null ) {
-			final CompositeType compositeType = findAnnotation( property, CompositeType.class );
+		if ( attributeMember != null ) {
+			final CompositeType compositeType =
+					attributeMember.locateAnnotationUsage( CompositeType.class, sourceModelContext );
 			if ( compositeType != null ) {
 				return compositeType.value();
 			}
 			final Class<? extends CompositeUserType<?>> compositeUserType =
-					resolveTimeZoneStorageCompositeUserType( property, returnedClass, context );
+					resolveTimeZoneStorageCompositeUserType( attributeMember, returnedClass, context );
 			if ( compositeUserType != null ) {
 				return compositeUserType;
 			}
 		}
 
 		if ( returnedClass != null ) {
-			final Class<?> embeddableClass = context.getBootstrapContext()
-					.getReflectionManager()
-					.toClass( returnedClass );
+			final Class<?> embeddableClass = returnedClass.toJavaClass();
 			if ( embeddableClass != null ) {
 				return context.getMetadataCollector().findRegisteredCompositeUserType( embeddableClass );
 			}
 		}
 
 		return null;
-	}
-
-	private static void processId(
-			PropertyHolder propertyHolder,
-			PropertyData inferredData,
-			SimpleValue idValue,
-			Map<String, IdentifierGeneratorDefinition> classGenerators,
-			boolean isIdentifierMapper,
-			MetadataBuildingContext context) {
-		if ( isIdentifierMapper ) {
-			throw new AnnotationException( "Property '"+ getPath( propertyHolder, inferredData )
-					+ "' belongs to an '@IdClass' and may not be annotated '@Id' or '@EmbeddedId'" );
-		}
-		final XProperty idProperty = inferredData.getProperty();
-		final List<Annotation> idGeneratorAnnotations = findContainingAnnotations( idProperty, IdGeneratorType.class );
-		final List<Annotation> generatorAnnotations = findContainingAnnotations( idProperty, ValueGenerationType.class );
-		removeIdGenerators( generatorAnnotations, idGeneratorAnnotations );
-		if ( idGeneratorAnnotations.size() + generatorAnnotations.size() > 1 ) {
-			throw new AnnotationException( "Property '"+ getPath( propertyHolder, inferredData )
-					+ "' has too many generator annotations " + combine( idGeneratorAnnotations, generatorAnnotations ) );
-		}
-		if ( !idGeneratorAnnotations.isEmpty() ) {
-			final Annotation annotation = idGeneratorAnnotations.get(0);
-			final ServiceRegistry serviceRegistry = context.getBootstrapContext().getServiceRegistry();
-			final BeanContainer beanContainer =
-					allowExtensionsInCdi( serviceRegistry )
-							? serviceRegistry.requireService( ManagedBeanRegistry.class ).getBeanContainer()
-							: null;
-			idValue.setCustomIdGeneratorCreator( identifierGeneratorCreator( idProperty, annotation, beanContainer ) );
-		}
-		else if ( !generatorAnnotations.isEmpty() ) {
-//			idValue.setCustomGeneratorCreator( generatorCreator( idProperty, generatorAnnotation ) );
-			throw new AnnotationException( "Property '"+ getPath( propertyHolder, inferredData )
-					+ "' is annotated '" + generatorAnnotations.get(0).annotationType()
-					+ "' which is not an '@IdGeneratorType'" );
-		}
-		else {
-			final XClass entityClass = inferredData.getClassOrElement();
-			createIdGenerator( idValue, classGenerators, context, entityClass, idProperty );
-			if ( LOG.isTraceEnabled() ) {
-				LOG.tracev(
-						"Bind {0} on {1}",
-						isCompositeId( entityClass, idProperty ) ? "@EmbeddedId" : "@Id",
-						inferredData.getPropertyName()
-				);
-			}
-		}
-	}
-
-	// Since these collections may contain Proxies created by common-annotations module we cannot reliably use simple remove/removeAll
-	// collection methods as those proxies do not implement hashcode/equals and even a simple `a.equals(a)` will return `false`.
-	// Instead, we will check the annotation types, since generator annotations should not be "repeatable" we should have only
-	// at most one annotation for a generator:
-	private static void removeIdGenerators(List<Annotation> generatorAnnotations, List<Annotation> idGeneratorAnnotations) {
-		for ( Annotation id : idGeneratorAnnotations ) {
-			generatorAnnotations.removeIf( gen -> gen.annotationType().equals( id.annotationType() ) );
-		}
 	}
 }
